fix: description spacings

--- a/frontend/theme/extras/main.less
+++ b/frontend/theme/extras/main.less
@@ -93,12 +93,12 @@ body.section-edit {
     }
 
     @media (min-width: 1200px) {
-      padding: 5px 115px 5px 30px;
+      padding: 5px 115px 5px 115px;
     }
 
     .quote-bonnefanten.quote-top-left {
       top: 20px;
-      left: -70px;
+      left: -95px;
     }
 
     .quote-bonnefanten.quote-top-right {
